host/int/service.yml
apiVersion: v1
kind: Service
metadata:
  name: #{ALM.Project.Name}#
  labels:
    app: #{ALM.Project.Name}#
spec:
  ports:
  # Tomcat listens on port 8080 so expose the service on 
  # port 80 and send traffic to 8080
  - port: 80
    targetPort: 8080
  selector:
    # this must match the label in the deployment
    app: #{ALM.Project.Name}#
